# manifesto

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  macros.bzl
.github/workflows/: build.yaml
bazel/: deps.bzl  macros.bzl  repos.bzl
bazel/tools/: BUILD.bazel  install.bzl
certificates/: BUILD  BUILD.bazel  authority.jsonnet  cainjector.jsonnet  controller.jsonnet  deps.bzl  main.jsonnet  rbac.jsonnet  webhook.jsonnet
certificates/lib/: BUILD.bazel  cainjector.libsonnet  controller.libsonnet  issuers.libsonnet  webhook.libsonnet
custom-resources/: BUILD.bazel  deps.bzl  repos.bzl
custom-resources/cert-manager/: BUILD.bazel  deps.bzl  rbac.jsonnet  repos.bzl  upstream.patch
custom-resources/traefik/: BUILD.bazel  rbac.jsonnet  repos.bzl
ingress/: BUILD.bazel  traefik.jsonnet
ingress/lib/: traefik.libsonnet
kube-system/: BUILD  BUILD.bazel  metrics-server.jsonnet
kubeadm/: BUILD.bazel  kubeadm.jsonnet
lib/: BUILD  BUILD.bazel  apps.libsonnet  contrib.libsonnet  core.libsonnet  core.test.jsonnet  k8s.libsonnet  kube.libsonnet  manifesto.libsonnet  meta.libsonnet  meta.test.jsonnet  rbac.libsonnet  repos.bzl  xapi.libsonnet
lib/api/: admissionregistration.libsonnet  apiextensions.libsonnet  apiregistration.libsonnet  apps.libsonnet  core.libsonnet  meta.libsonnet  rbac.test.libsonnet
lib/contrib/: certmanager.libsonnet
lib/ext/: certmanager.libsonnet
lib/kube/: apps.libsonnet  core.libsonnet  rbac.libsonnet
lib/templates/: BUILD  namespace.jsonnet
lib/tests/: BUILD.bazel  core.jsonnet  meta.jsonnet  rbac.jsonnet
loadbalancing/: BUILD.bazel  config.jsonnet  controller.jsonnet  speaker.jsonnet
templates/: BUILD  namespace.jsonnet
