load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

alias(
    name = "apply",
    actual = ":custom-resources.apply",
)

k8s_objects(
    name = "custom-resources",
    objects = [
        "@manifesto//custom-resources/cert-manager:cert-manager",
        "@manifesto//custom-resources/traefik:traefik",
    ],
    visibility = ["@manifesto//:__pkg__"],
)
