load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

jsonnet_library(
    name = "lib",
    srcs = ["k8s.libsonnet"],
    deps = [":api", ":ext"],
    visibility = ["@manifesto//:__subpackages__"],
)

jsonnet_library(
    name = "api",
    srcs = glob(["api/*.libsonnet"]),
)

jsonnet_library(
    name = "ext",
    srcs = glob(["ext/*.libsonnet"]),
    deps = [":api"],
)
