load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

alias(
    name = "lib",
    actual = ":manifesto",
    visibility = ["//visibility:public"],
)

jsonnet_library(
    name = "manifesto",
    srcs = ["manifesto.libsonnet"],
    deps = [":internal"],
)

jsonnet_library(
    name = "internal",
    srcs = [
        "core.libsonnet",
        "meta.libsonnet",
        "rbac.libsonnet",
    ],
)
