load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@manifesto//:macros.bzl", "k8s_manifests")

k8s_objects(
    name = "cert-manager",
    objects = [
        ":crd",
        ":rbac",
    ],
)

k8s_manifests(
    name = "crd",
    src = "@cert-manager//deploy/crds:templates.regular",
)

k8s_manifests(name = "rbac")
