load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@manifesto//:macros.bzl", "k8s_manifests")

k8s_objects(
    name = "cert-manager",
    objects = [
        ":crd",
        ":rbac",
    ],
    visibility = ["@manifesto//:__subpackages__"],
)

k8s_manifests(
    name = "crd",
    src = "@cert-manager//deploy/manifests:cert-manager.nohelm.crds.yaml",
)

k8s_manifests(name = "rbac")
