load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_to_json_test")

jsonnet_to_json_test(
    name = "core",
    src = "core.jsonnet",
    deps = [
        "//lib",
        "@jsonnetunit//jsonnetunit",
    ],
)

jsonnet_to_json_test(
    name = "meta",
    src = "meta.jsonnet",
    deps = [
        "//lib",
        "@jsonnetunit//jsonnetunit",
    ],
)

jsonnet_to_json_test(
    name = "rbac",
    src = "rbac.jsonnet",
    deps = [
        "//lib",
        "@jsonnetunit//jsonnetunit",
    ],
)
